--- a/assets/less/directus/cards.less
+++ b/assets/less/directus/cards.less
@@ -53,6 +53,10 @@
       .featured {
         margin-top: -4px;
       }
+      .primary-info {
+        height: 1em;
+        overflow: hidden;
+      }
       .extra {
         li {
           border-bottom: solid 1px @lightGrey;
